# ar64

./: .gitignore  LICENSE  README  README.md  links.md
ar64_web/: package-lock.json  package.json
ar64_web/src/routes/: +page.svelte
ar64_web/src/routes/api/ar64/: +server.js
rust/: Cargo.toml  doc  go
rust/src/: main.rs  sim.rs
sim/: Cargo.toml  Cargo.toml_webasm  doc  go
sim/src/: lib.rs  main.rs  sim.rs
sixel/: package.json  run.sh  sixel.js
tests/: test.sh
tests/UART/: add.S  add.c
tests/loop-test/: README  add.c
tests/loop-test_2/: add.c  link.ld
